--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta name="theme-color" content="#0C1115">
-    <title>VozBook AI</title>
+    <meta name="theme-color" content="#0d1117">
+    <title>SONARA - AI Audio Experience</title>
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" rel="stylesheet" />
   <script type="importmap">
 {
@@ -24,7 +24,7 @@
 }
 </script>
 </head>
-  <body class="bg-[#0C1115]">
+  <body class="bg-[#0d1117]">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
